--- a/指令/03v-text.html
+++ b/指令/03v-text.html
@@ -17,7 +17,7 @@
     </div>
 </body>
 </html>
-<script src="vue.js"></script>
+<script src="../vue.js"></script>
 <script>
     let vm=new Vue({
         // 挂载点：vue作用的范围
