--- a/指令/04v-html.html
+++ b/指令/04v-html.html
@@ -13,7 +13,7 @@
     </div>
 </body>
 </html>
-<script src="vue.js"></script>
+<script src="../vue.js"></script>
 <script>
     let vm = new Vue({
         el:"#app",
