--- a/指令/05v-if&v-show.html
+++ b/指令/05v-if&v-show.html
@@ -18,7 +18,7 @@
     </div>
 </body>
 </html>
-<script src="vue.js"></script>
+<script src="../vue.js"></script>
 <script>
     let vm = new Vue({
         el:"#app",
