--- a/指令/08v-on.html
+++ b/指令/08v-on.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="vue.js"></script>
+    <script src="../vue.js"></script>
     <style>
         .big{height:200px;width:200px;background: coral;}
         .small{height:100px;width:100px;background:cornflowerblue}
