--- a/指令/25watch.html
+++ b/指令/25watch.html
@@ -45,7 +45,7 @@
     })
     /*
         watch属性监听
-        watch属性监听依赖data中的属性，当data中的属性发生改变的时候watch中对应的函数会去执行
+        watch属性监听依赖data中的属性，当data中的属性发生改变的时候watch中对应的函数会去执行     监听的dom元素都是旧的
 
         1.函数名必须是属性名
         2.函数不需要调用
