--- a/project/music/public/index.html
+++ b/project/music/public/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  
+  <script>
+    document.documentElement.style.fontSize=document.documentElement.clientWidth/10+"px";
+    console.log(document.documentElement.style.fontSize)
+  </script>
 </head>
 <body>
   <div id="app"></div>
